# gs-erp-3d-classification

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-local.txt  requirements.txt
configs/: effnetv2_hsdc_mn40.yaml  effnetv2_swhdc_mn40.yaml  resnet34_hsdc_mn10.yaml  resnet34_hsdc_mn40.yaml  resnet50_swhdc_mn10.yaml  resnet50_swhdc_mn40.yaml  swin_hsdc_mn10.yaml  swin_hsdc_mn40.yaml  swin_swhdc_mn10.yaml  swin_swhdc_mn40.yaml
docs/: DOCKER_SETUP.md  architecture.md  technical_documentation.md
notebooks/: erp_cache_visualization.ipynb  modelsplat_visualization.ipynb  preprocessing_visualization.ipynb  radiance_field_erp.ipynb  results_analysis.ipynb
scripts/: check_gpu.py  download_modelsplat.py  patch_erp_notebooks.py  patch_notebook.py  preprocess_all.sh  preprocess_dataset.py  preprocess_radiance_field.py  render_diagrams.py  run_baselines.sh
src/analysis/: __init__.py  compare.py  metrics.py  visualize.py
src/models/: __init__.py  classifier.py
src/models/backbones/: __init__.py  effnetv2_hsdc.py  resnet_hsdc.py  swin_hsdc.py
src/models/blocks/: __init__.py  hsdc.py  swhdc.py
src/preprocessing/: __init__.py  augmentation.py  dataset.py  erp_features.py  ply_loader.py  radiance_field.py  ray_casting.py
src/training/: __init__.py  evaluate.py  scheduler.py  train.py
tcc/: cic-tc.tex
tests/: test_models.py  test_preprocessing.py  test_training.py
